force-app/main/default/objects/SVMXC__SFM_Event__c/SVMXC__SFM_Event__c.object-meta.xml
<CustomObject>
    <description>Object to store event details.</description>
    <label>SFM Event</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFM Events</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>