force-app/main/default/objects/SVMXC__SFM_Event__c/fields/SVMXC__IsStandard__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__IsStandard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsStandard</description>
    <inlineHelpText>IsStandard</inlineHelpText>
    <label>Is Standard?</label>
    <type>Checkbox</type>
</CustomField>