force-app/main/default/objects/SVMXC__SFM_Event__c/fields/SVMXC__Method__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Method__c</fullName>
    <description>Method name of the web service call</description>
    <label>Target Call Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>