force-app/main/default/objects/SVMXC__SFM_Event__c/fields/SVMXC__Page_Layout__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Page_Layout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Page Layout</label>
    <referenceTo>SVMXC__Page_Layout__c</referenceTo>
    <relationshipLabel>SFM Event</relationshipLabel>
    <relationshipName>SFM_Event</relationshipName>
    <type>Lookup</type>
</CustomField>