force-app/main/default/objects/SVMXC__SFM_Event__c/fields/SVMXC__Target_Call__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Target_Call__c</fullName>
    <label>Target Call</label>
    <length>255</length>
    <type>Text</type>
</CustomField>